fix safari bug where logo not displaying correct z-index

--- a/src/css/layout/_navigation.scss
+++ b/src/css/layout/_navigation.scss
@@ -34,6 +34,7 @@
     &__logo {
         box-sizing: border-box;
         display: flex;
+        position: relative;
         flex-direction: row;
         font-size: 1rem;
         justify-content: flex-end;
